[gd_scene load_steps=5 format=2]

[ext_resource path="res://sprites/logo.png" type="Texture" id=1]
[ext_resource path="res://sprites/background menu.png" type="Texture" id=2]
[ext_resource path="res://Scripts/menu.gd" type="Script" id=4]

[sub_resource type="AnimatedTexture" id=1]

[node name="menu" type="Node2D"]
script = ExtResource( 4 )

[node name="BackgroundMenu" type="Sprite" parent="."]
modulate = Color( 0.290196, 0.2, 0.2, 1 )
scale = Vector2( 1.08125, 1.10926 )
texture = ExtResource( 2 )

[node name="Logo" type="Sprite" parent="."]
position = Vector2( 0, -152 )
scale = Vector2( 1.05067, 1.08258 )
texture = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="Start" type="Button" parent="."]
margin_left = -110.0
margin_top = 80.0
margin_right = 110.0
margin_bottom = 130.0
icon = SubResource( 1 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label Start" type="Label" parent="Start"]
margin_left = 10.0
margin_top = 1.0
margin_right = 210.0
margin_bottom = 51.0
text = "Start"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sair" type="Button" parent="."]
margin_left = -110.0
margin_top = 180.0
margin_right = 110.0
margin_bottom = 230.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label Quit" type="Label" parent="Sair"]
margin_left = 10.0
margin_top = 1.0
margin_right = 210.0
margin_bottom = 51.0
text = "Quit"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckButton" type="CheckButton" parent="."]
margin_left = -498.0
margin_top = -304.0
margin_right = -379.0
margin_bottom = -209.0
text = "Sound"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Sair" to="." method="_on_Sair_pressed"]
[connection signal="toggled" from="CheckButton" to="." method="_on_CheckButton_toggled"]
